# telegram-study-bot

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_subject_plan_storage.py  0003_lesson_plan_links.py  0004_subject_short_name_normalization.py  0005_subject_plan_schedule_lesson_number.py  0006_subject_timetable_number_mode.py
data/: group-time-table (1).xls
src/study_assistant_bot/: __main__.py  config.py  enums.py  lesson_title_parser.py  logging.py  main.py  texts.py
src/study_assistant_bot/bot/: __init__.py  dispatcher.py
src/study_assistant_bot/bot/handlers/: __init__.py  schedule.py  sections.py  start.py
src/study_assistant_bot/bot/keyboards/: __init__.py  main_menu.py  schedule_inline.py  schedule_menu.py
src/study_assistant_bot/bot/middlewares/: __init__.py  access.py  db_session.py
src/study_assistant_bot/db/: __init__.py  session.py
src/study_assistant_bot/db/models/: __init__.py  lesson.py  subject.py  subject_plan.py  user.py
src/study_assistant_bot/scripts/: anchor_link_lesson_plans.py  import_subject_plans.py  import_timetable.py  relink_lesson_plans.py
src/study_assistant_bot/services/: __init__.py  lesson_plan_linking.py  schedule_service.py  subject_plan_import.py  timetable_import.py  user_service.py
